--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -49,7 +49,7 @@
       {{#each values}}
       <div class="col-xs-6 ">
         <a href="/products/{{this}}" style="text-decoration: none; color: black;">
-          <div class="card ml-5 mb-4" style="width: 10rem;height: 11rem;">
+          <div class="card ml-5 mb-4 " style="width:10rem;height:11rem">
             <img class="card-img-top text-center " style="height: 7rem;width:7rem; margin:auto;"
               src="/images/{{this}}.jpg" alt="Card image cap">
             <div class="card-body pb-3">
