--- a/views/user/products.hbs
+++ b/views/user/products.hbs
@@ -105,6 +105,7 @@
                 let count = $('#cartCount').html()
                 count = parseInt(count) + 1
                 $("#cartCount").html(count)
+                location.href = '/cart'
               }
             }
           })
