--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -10,6 +10,17 @@
     font-size: 12px;
   }
 </style>
+<div class="col-12 ml-5 pl-5" style="">
+  <div class="input-group">
+  <div class="form-outline">
+    <input type="search" id="form1" class="form-control" />
+  </div>
+  <button type="button" class="btn btn-primary" style="height: 3rem;">
+    <i class="fas fa-search"></i>
+  </button>
+</div>
+
+</div>
 <section class="">
   <div id="carouselExampleIndicators" style="height:auto;width: auto;" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
