Cart page bug fixed. User Login page Updated

--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -1,6 +1,5 @@
-<header>
+<header style="position: fixed;width: 100%;z-index:2">
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #6351ce;">
-
     <a class="navbar-brand" href="/" style="font-family: cursive;font-size: x-large; color: #ffff;"><img
         src="/images/cart.png" alt="" class="ml-5" style="height: 2rem;"> Mykart</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
