--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -23,7 +23,7 @@
 </div>
 <section class="">
   <div id="carouselExampleIndicators" style="height:auto;width: auto;" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
+    <ol class="carousel-indicators" style="z-index: 1;">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
