--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -1,4 +1,4 @@
-  <header>
+  <header  style="position: fixed;width: 100%;z-index:2">
       <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #6351ce;">
         <a
           class="navbar-brand"
