--- a/views/user/products.hbs
+++ b/views/user/products.hbs
@@ -1,6 +1,6 @@
 {{#if laptop}}
-<section>
-  <div class="  pt-5">
+<section class="">
+  <div class="  pt-5 mt-5">
     <div class="row">
       {{#each products}}
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 pl-4">
@@ -33,7 +33,7 @@
 </section>
 {{else if fashion}}
 <section>
-  <div class="mt-5 ml-5">
+  <div class="mt-5 ml-5 pt-5">
     <div class="row">
       {{#each products}}
       <div class="col-6 col-sm-4 col-lg-3">
@@ -54,7 +54,7 @@
 </section>
 {{else}}
 <section>
-  <div class="  pt-5">
+  <div class="  pt-5 mt-5">
     <div class="row">
       {{#each products}}
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 pl-4">
