Modified navbar design & cart bug fixed

--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -10,18 +10,7 @@
     font-size: 12px;
   }
 </style>
-<div class="col-12 ml-5 pl-5" style="">
-  <div class="input-group">
-  <div class="form-outline">
-    <input type="search" id="form1" class="form-control" />
-  </div>
-  <button type="button" class="btn btn-primary" style="height: 3rem;">
-    <i class="fas fa-search"></i>
-  </button>
-</div>
-
-</div>
-<section class="">
+<section class="pt-5 mt-5">
   <div id="carouselExampleIndicators" style="height:auto;width: auto;" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators" style="z-index: 1;">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -54,7 +43,7 @@
   </div>
 </section>
 
-<section style="background-color: #f5f5ef;">
+<section style="background-color: #f5f5ef;" id="products">
   <div class=" pl-4 pt-4">
     <div class="row pl-3 ">
       {{#each values}}
@@ -74,11 +63,11 @@
     </div>
   </div>
 </section>
-<section>
+<section  id="about">
   <div class="">
-    <div class="row pl-4 pr-4" style="background-color: #E5E4E2;">
+    <div class="row pl-4 pr-4"  style="background-color: #E5E4E2;">
       <div class="  col-md-12 pt-2" style="color:#878787; font-family: Roboto,Arial,sans-serif;text-align: left;">
-        <h5 style="" class="sub-head">What Can You Buy From Mykart?</h5>
+        <h5 style="" class="sub-head">What Can You Buy From CARTMAX?</h5>
         <h5 style="" class="sub-head">Mobile Phones</h5>
         <p style="" class="details">From budget phones to state-of-the-art smartphones, we have a mobile for everybody
           out there. Whether you're looking for larger, fuller screens, power-packed batteries, blazing-fast processors,
@@ -144,8 +133,7 @@
   </div>
 </section>
 <!-- Remove the container if you want to extend the Footer to full width. -->
-<div class="
-">
+<div class="" id="contact">
 
   <!-- Footer -->
   <footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
