--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -1,12 +1,17 @@
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
 
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <title>{{pageName}}</title>
+  <link rel="stylesheet" href="">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    type='text/css'>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.typekit.net/pfx1znz.css">
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
@@ -33,7 +38,11 @@
 
 <body>
   {{#if admin}}
-  {{>admin-header}}
+    {{>admin-header}}
+  {{else if cart}}
+      {{>cart-header}}
+  {{else if signup}}
+      {{>login-header}}
   {{else}}
   {{>user-header}}
   {{/if}}
@@ -51,3 +60,4 @@
 </body>
 
 </html>
+
