--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -1,58 +1,105 @@
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6 m-auto pt-5">
-        <h2 class="text-center mb-3 pb-5">Create new Account</h2>
-        <form method="post" action="/signup" enctype="multipart/form-data">
-            <div class="form-outline mb-4">
-            <input type="text" id="form2Example1" class="form-control" name="Name"/>
-            <label class="form-label" for="form2Example1"  >Name</label>
-          </div>
-          <!-- Email input -->
-          <div class="form-outline mb-4">
-            <input type="email" id="form2Example1" class="form-control" name="Email" />
-            <label class="form-label" for="form2Example1">Email address</label>
-          </div>
+<section style="padding-top:8rem ;">
+  <section>
+    <div class="container">
+      <div class="row" style=" ">
+        <div class="col-12 col-lg-8  m-auto pt-5"
+          style="border: ridge;border-width: thin;box-shadow: 0 5px 38px 0 rgb(0 0 0 / 30%);">
+          <h2 class="text-center mb-3 pb-5">Create new Account</h2>
+          <form action="/signup" method="post" enctype="multipart/form-data" id="login">
+            {{#if loginErr}}
+            <p class="error" style="color: red;"> {{loginErr}}</p>
+            {{/if}}
+            <!-- Email input -->
+            <div class="form-outline mb-4" style="    padding-left: 4rem;
+    width: 88%;">
+              <input type="text" id="form2Example1" class="form-control" placeholder="Name" name="Name" />
 
-          <!-- Password input -->
-          <div class="form-outline mb-4">
-            <input type="password" id="form2Example2" class="form-control" name="Password" />
-            <label class="form-label" for="form2Example2">Password</label>
-          </div>
+            </div>
+            <div class="form-outline mb-4" style="    padding-left: 4rem;
+    width: 88%;">
+              <input type="email" id="form2Example1" class="form-control" placeholder="Email" name="Email" />
 
-          <!-- 2 column grid layout for inline styling -->
-          <div class="row mb-4">
-            <div class="col d-flex justify-content-center">
-              <!-- Checkbox -->
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  value=""
-                  id="form2Example31"
-                  checked
-                />
-                <label class="form-check-label" for="form2Example31">
-                  Remember me
-                </label>
+            </div>
+
+            <!-- Password input -->
+            <div class="form-outline mb-4" style="    padding-left: 4rem;
+    width: 88%;">
+              <input type="password" id="form2Example2" class="form-control" placeholder="Password" name="Password" />
+
+            </div>
+
+            <!-- 2 column grid layout for inline styling -->
+            <div class="row mb-4">
+              <div class="col d-flex justify-content-center">
+                <!-- Checkbox -->
               </div>
             </div>
-
-            <div class="col">
-              <!-- Simple link -->
-              <a href="#!"></a>
+            <div class="row row-but" style="">
+              <!-- Submit button -->
+              <button type="submit" class="but btn btn-primary btn-block mb-4" style="">SIGN UP</button>
             </div>
-          </div>
-
-          <!-- Submit button -->
-          <button type="submit" class="btn btn-primary btn-block mb-4">Sign up</button>
-
-          <!-- Register buttons -->
-          <div class="text-center">
+            <!-- Register buttons -->
+             <div class="text-center">
             <p>Not a member? <a href="/login">Already have account ?</a></p>
           </div>
-        </form>
+          </form>
+        </div>
+
+
       </div>
     </div>
-  </div>
+  </section>
+  <style>
+    .adrow {
+      padding-left: 12rem;
+      padding-top: 1rem;
+
+    }
+
+    @media(min-width:768px) {
+      .adrow {
+        padding-left: 36rem;
+        padding-top: 2rem;
+      }
+    }
+
+    .ad {
+      background-color: black;
+
+      width: 45%;
+
+    }
+
+    @media(min-width:768px) {
+
+      .ad {
+        background-color: black;
+        width: 28%;
+        height: 3rem;
+      }
+    }
+
+    .row-but {
+      padding-left: 12rem;
+    }
+
+    @media(min-width:768px) {
+      .row-but {
+        padding-left: 20rem;
+      }
+    }
+
+    .but {
+      width: 35%;
+      height: 3rem;
+    }
+
+    @media (min-width:768px) {
+      .but {
+        box-shadow: 0 4px 10px 0 rgb(0 0 0 / 30%);
+        width: 28%;
+        height: 3rem;
+      }
+    }
+  </style>
 </section>
