Order page modified.Brings cancel option for orders

--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -43,6 +43,8 @@
       {{>cart-header}}
   {{else if signup}}
       {{>login-header}}
+  {{else if order}}
+      {{>order-header}}
   {{else}}
   {{>user-header}}
   {{/if}}
