--- a/views/user/order-success.hbs
+++ b/views/user/order-success.hbs
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container  mt-5" style="padding-top: 15rem;">
     <div class="col-md-12 text-center">
-         <h2>Order Placed Successfully</h2>
+         <h2>Order Placed Successfully!</h2>
          <br>
          <a href="/orders" class="btn btn-success">View Orders</a>
     </div>
