--- a/views/user/place-order.hbs
+++ b/views/user/place-order.hbs
@@ -1,4 +1,4 @@
-<section>
+<section style="padding-top:5rem ;padding-bottom: 5rem;">
     <div class="container mt-5 fadeInDown">
         <form action="" id="checkout-form" method="post">
             <div class="row">
@@ -13,19 +13,18 @@
                     <h2>Enter delivery address</h2>
                     <br>
                     <div>
-
                         <label for="">Address</label>
-                        <input type="text" name="address" id="address" class="form-control">
+                        <input type="text" name="address" id="address" style="height: 5rem;" class="form-control" required>
                         <label for="">Pincode</label>
-                        <input type="text" name="pincode" id="pincode" class="form-control">
+                        <input type="" name="pincode" id="pincode" class="form-control" required>
                         <label for="">Mobile</label>
-                        <input type="text" name="mobile" id="mobile" class="form-control" style="">
+                        <input type="tel" name="mobile" id="mobile" class="form-control" style="" required>
                         <input type="text" name="userId" id="" value="{{user._id}}" hidden>
 
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="container mt-5 ml-5 checkout">
+                <div class="col-md-3">
+                    <div class="container mt-5  checkout">
                         <h5>
                             Total Amount:₹ {{total}}.00
                         </h5>
@@ -40,10 +39,7 @@
                             </label>
                             <button class="btn btn-primary float-right checkoutButton" type="submit"><span><i class="fas fa-cash-register"></i></span> Checkout</button>
                         </div>
-
-
                     </div>
-
                 </div>
             </div>
         </form>
